<resources>
    <string name="app_name">InColor</string>

    <string name="sign_up_italic"><u>회원가입</u></string>
    <string name="find_password_italic"><u>비밀번호찾기</u></string>
    <string name="sign_up">회원가입</string>
    <string name="find_password">비밀번호찾기</string>
    <string name="sign_in">로그인</string>
    <string name="auto_sign_in">자동로그인</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="email">이메일</string>
    <string name="id">아이디</string>
    <string name="name">이름</string>
    <string name="check_email">중복체크</string>
    <string name="send_email">메일 전송</string>
    <string name="write_diary">작성</string>

    <!--week string-->
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="year">년&#160;</string>
    <string name="month">월&#160;</string>
    <string name="day">일&#160;</string>

    <!--menu string-->
    <string name="menu_calendar">캘린더</string>
    <string name="menu_list">리스트</string>

    <!--menu string-->
    <string name="weather">날씨</string>
    <string name="mood">기분</string>
    <string name="content">일기</string>

    <!--notify string-->
    <string name="notify_check_email">* 유효한 이메일을 입력하세요.</string>
    <string name="notify_fill_out_email">* 이메일을 입력하세요.</string>
    <string name="notify_able_sign_up">* 사용가능한 이메일입니다.</string>
    <string name="notify_unable_sign_up">* 이미 존재하는 이메일입니다.</string>
    <string name="notify_check_fail">* 중복체크에 실패하였습니다.</string>
    <string name="notify_need_email_check">* 이메일 중복체크가 필요합니다.</string>
    <string name="notify_pw_not_same">* 비밀번호가 일치하지 않습니다.</string>
    <string name="notify_reset_password">* 비밀번호 변경 링크가 발송됩니다.</string>
    <string name="notify_fill_out">* 빈칸을 입력하세요.</string>
    <string name="notify_pw">* 6자리 이상의 비밀번호를 입력하세요.</string>
</resources>
