<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/top_layout_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:background="@drawable/border_bottom"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintHeight_min="60dp">
            <Button
                android:id="@+id/back_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/back_btn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:textColor="@color/colorDarkGray"
                android:layout_centerInParent="true"/>
        </RelativeLayout>
        
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/top_layout_signup"
            app:layout_constraintBottom_toTopOf="@id/bottom_layout_signup">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        style="@style/inputFieldTextView" />

                    <EditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/name"
                        style="@style/CustomEditText"/>
                    <TextView
                        android:id="@+id/check_name_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:text="@string/notify_fill_out"
                        tools:visibility="visible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/id"
                        style="@style/inputFieldTextView" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/id_edit_text"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_toStartOf="@+id/check_email_btn"
                            style="@style/EmailEditText"/>

                        <Button
                            android:id="@+id/check_email_btn"
                            android:layout_width="70dp"
                            android:layout_height="35dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="10dp"
                            android:text="@string/check_email"
                            style="@style/SmallCustomButton"/>
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/check_email_result_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:visibility="visible"
                        tools:text="@string/notify_able_sign_up"
                        tools:visibility="visible" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        style="@style/inputFieldTextView" />

                    <EditText
                        android:id="@+id/pw_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/password"
                        style="@style/PasswordEditText"/>

                    <TextView
                        android:id="@+id/check_pw_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:text="@string/notify_pw"
                        tools:visibility="visible"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/check_password"
                        style="@style/inputFieldTextView" />

                    <EditText
                        android:id="@+id/check_pw_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/check_password"
                        style="@style/PasswordEditText"/>

                    <TextView
                        android:id="@+id/check_pw_confirm_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:visibility="gone"
                        android:text="@string/notify_pw_not_same"
                        tools:visibility="visible"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
        <RelativeLayout
            android:id="@+id/bottom_layout_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:background="@drawable/border_top"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintHeight_min="90dp">
            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sign_up"
                android:enabled="false"
                style="@style/CustomButton" />
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>