<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_iv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="0.15"
            app:layout_constraintVertical_bias="0.18"
            android:src="@drawable/icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/icon_iv"
            app:layout_constraintBottom_toTopOf="@id/login_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.25">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    style="@style/inputFieldTextView"/>

                <EditText
                    android:id="@+id/id_edit_text"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    style="@style/EmailEditText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    style="@style/inputFieldTextView"/>

                <EditText
                    android:id="@+id/pw_edit_text"
                    android:layout_width="270dp"
                    android:layout_height="50dp"
                    android:hint="@string/password"
                    style="@style/PasswordEditText"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true">
                    <TextView
                        android:id="@+id/create_user_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:textSize="13sp"
                        android:text="@string/sign_up_italic"
                        />
                    <TextView
                        android:id="@+id/find_password_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:textSize="13sp"
                        android:text="@string/find_password_italic"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/auto_sign_in_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">
                    <CheckBox
                        android:id="@+id/auto_sign_in_check_box"
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:layout_gravity="center_vertical"
                        android:button="@null"
                        android:background="@drawable/check_box"
                        android:checked="false"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="7dp"
                        android:textSize="13sp"
                        android:text="@string/auto_sign_in"
                        />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:background="@drawable/border_top"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintHeight_min="90dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:text="@string/sign_in"
                style="@style/CustomButton" />
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>