<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.FindPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/top_layout_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="15dp"
            android:background="@drawable/border_bottom"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintHeight_min="60dp">
            <Button
                android:id="@+id/back_btn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:background="@drawable/back_btn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_password"
                android:textSize="18sp"
                android:textColor="@color/colorDarkGray"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="15dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/top_layout_signup"
                app:layout_constraintBottom_toTopOf="@id/bottom_layout_signup">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/inputFieldTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:text="@string/id"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/id_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        style="@style/EmailEditText"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="7dp"
                        android:text="@string/notify_reset_password"/>
                </LinearLayout>
            </LinearLayout>
        <RelativeLayout
            android:id="@+id/bottom_layout_signup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="20dp"
            android:background="@drawable/border_top"
            app:layout_constraintHeight_percent="0.10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="spread"
            app:layout_constraintHeight_min="90dp">
            <Button
                android:id="@+id/send_mail_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:text="@string/send_email"
                style="@style/CustomButton" />
        </RelativeLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>